# fpo_mj

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_play.sh  run_train.sh
src/fpo_mj/: __init__.py  config.py  obs_adapter.py  supported_tasks.py  task_registry.py
src/fpo_mj/algorithms/: __init__.py  fpo.py
src/fpo_mj/config/: __init__.py  fpo_runner_cfg.py
src/fpo_mj/env/: __init__.py  obs_adapter.py
src/fpo_mj/modules/: __init__.py  actor_critic.py  ema.py  normalizer.py
src/fpo_mj/runners/: __init__.py  fpo_on_policy_runner.py
src/fpo_mj/scripts/: __init__.py  eval.py  play.py  train.py
src/fpo_mj/storage/: __init__.py  rollout_storage.py
src/fpo_mj/utils/: __init__.py  core.py
tests/: __init__.py  test_fpo_core.py  test_fpo_runner_cfg.py  test_integration_smoke.py  test_obs_adapter.py  test_play.py  test_runner.py  test_supported_tasks.py  test_task_registry.py  test_train_eval_scripts.py
