[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpo_mj"
version = "0.1.0"
description = "Flow Policy Optimization for mjlab locomotion tasks."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "BSD-3-Clause"
authors = [
  { name = "The fpo_mj Developers" },
]
dependencies = [
  "mjlab==1.2.0",
  "torch",
  "tensordict",
  "tyro",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
fpo-mj-train = "fpo_mj.scripts.train:main"
fpo-mj-eval = "fpo_mj.scripts.eval:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
